--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -60,10 +60,10 @@ const atomFeed = '/atom.xml'
 
 <script src='https://jswhisperer.uk/js/jquery.min.js'></script>
 
-<script src='https://jswhisperer.uk/js/responsiveslides.min.js'></script>
+<!-- <script src='https://jswhisperer.uk/js/responsiveslides.min.js'></script> -->
 
 <script>
-	window.head?.js('https://jswhisperer.uk/js/jquery.smooth-scroll.min.js')
+	head?.js('https://jswhisperer.uk/js/jquery.smooth-scroll.min.js')
 </script>
 
 <!-- Primary Meta Tags -->
