--- a/src/components/BlueSky.astro
+++ b/src/components/BlueSky.astro
@@ -1,4 +1,5 @@
 ---
+import BlueskyIcon from '@/components/icons/BlueskyIcon'
 type Props = {
 	blskyid: string
 }
@@ -9,7 +10,7 @@ const { blskyid } = Astro.props
 	blskyid && (
 		<section class='post__likes' data-bsky-container>
 			<h3 class='post__likesTitle'>
-				🦋 <span data-bsky-likes-count /> likes on Bluesky
+				<BlueskyIcon /> <span data-bsky-likes-count /> likes on Bluesky
 			</h3>
 			<a
 				class='post__likesCta'
