--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -19,7 +19,7 @@ const {
 	class='grid grid-rows-[300px_auto] md:grid-rows-[300px_220px] min-h-full group my-10'
 >
 	<!-- <a transition:animate={slide({ duration: '0.5s' })} class='relative overflow-hidden'> -->
-	<LinkUnderline link={`/post/${slug}/`}>
+	<a href={`/post/${slug}/`}>
 		{
 			heroImage && (
 				<Picture
@@ -45,7 +45,7 @@ const {
 				<span class='pb-4'>{category}</span>
 			</div>
 		</div>
-	</LinkUnderline>
+	</a>
 
 	<div class='flex justify-between flex-col gap-4 md:gap-0 py-6 pl-1'>
 		<div class='flex flex-col gap-3'>
@@ -63,16 +63,15 @@ const {
 		</div>
 
 		<footer class='flex justify-between items-center'>
-			<a
-				href={`/post/${slug}/`}
-				class='p-4 flex justify-center items-center dark:text-white rounded-full hover:translate-x-1 transition-transform duration-150 ease-in-out font-semibold gap-1 group'
+			<LinkUnderline
+				link={`/post/${slug}/`}
+				class='mt-4 p-4 flex justify-center items-center dark:text-white rounded-full hover:translate-x-1 transition-transform duration-150 ease-in-out font-semibold gap-1 group'
 				aria-label={`go to ${title}`}
 			>
 				Read Post <span
 					class='mt-[1px] group-hover:rotate-45 transition-transform duration-250 ease-in-out'
-					><ArrowUp width='18' height='18' /></span
-				>
-			</a>
+				></span>
+			</LinkUnderline>
 		</footer>
 	</div>
 </article>
