--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -69,7 +69,7 @@
 </div>
 <span class='main-content-shadow'></span>
 
-<style media='none' onload="if(media!='all') media='all'" loading='lazy'>
+<style media='none' onload="if(media!='all') media='all'">
 	span {
 		margin: 0;
 		padding: 0;
@@ -710,7 +710,7 @@
 		font-size: 100%;
 		font: inherit;
 		vertical-align: baseline;
-		text-shadow: 1px 1px 5px #fff;
+		textstyleow: 1px 1px 5px #fff;
 	}
 	* {
 		position: relative;
