--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -12,20 +12,6 @@ import BlueSky from '@/components/BlueSky'
 import { slide } from 'astro:transitions'
 const pageUrl = new URL(Astro.url.pathname, Astro.site)
 
-const webmentionsUrl =
-	'https://webmention.io/api/mentions.jf2?domain=jswhisperer.uk&token=S41J_UI23sPl4N4QtVtN8w'
-const response = await fetch(webmentionsUrl)
-const json = await response.json()
-const webmentions = json.children.filter(({ url }: { url: any }) => url.includes(pageUrl))
-
-// console.table({webmentions})
-
-if (webmentions) {
-	webmentions.map((webmention: any) => {
-		console.log(webmention)
-	})
-}
-
 const username = 'jswhisperer'
 
 type Props = {
@@ -158,8 +144,8 @@ const articleDate = pubDate.toISOString()
 
 		<div>
 			<slot />
-			<WebMention webmentions={webmentions} />
-			<BlueSky blskyid={blskyid || ''} />
+			<!-- <WebMention webmentions={webmentions} /> -->
+			<!-- <BlueSky blskyid={blskyid || ''} /> -->
 		</div>
 	</article>
 </BaseLayout>
