--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -61,9 +61,11 @@ const atomFeed = '/atom.xml'
 <script src='https://jswhisperer.uk/js/jquery.min.js'></script>
 
 <!-- <script src='https://jswhisperer.uk/js/responsiveslides.min.js'></script> -->
+<link rel='authorization_endpoint' href='https://indieauth.com/auth' />
+<link rel='token_endpoint' href='https://tokens.indieauth.com/token' />
 
 <script>
-	head?.js('https://jswhisperer.uk/js/jquery.smooth-scroll.min.js')
+	//	head?.js('https://jswhisperer.uk/js/jquery.smooth-scroll.min.js')
 </script>
 
 <!-- Primary Meta Tags -->
