--- a/src/components/WebMentions.astro
+++ b/src/components/WebMentions.astro
@@ -41,7 +41,7 @@ const showDate = (webmention: string) =>
 	webmentions.length > 0 ? (
 		<section aria-label='Webmentions'>
 			<h2>Webmentions</h2>
-
+			<div id='upvote-form' />
 			<ul>
 				{webmentions.map((webmention: WebmentionProps) => (
 					<li>
@@ -72,7 +72,9 @@ const showDate = (webmention: string) =>
 
 							{Object.prototype.toString.call(webmention['content']) === '[object Object]' &&
 								Object.keys(webmention['content']).map((key) => (
-									<div key={key} set:html={sanitizeHTML(webmention['content'][key])} />
+									<Fragment key={key}>
+										<div set:html={sanitizeHTML(webmention['content'][key])} />
+									</Fragment>
 								))}
 							{webmention['wm-property'] === 'repost-of' ? (
 								<p>
@@ -95,3 +97,58 @@ const showDate = (webmention: string) =>
 		overflow: hidden;
 	}
 </style>
+
+<script>
+	if (document.querySelector('body')) {
+		function setContent(child: { [x: string]: any; content: { text: any } }) {
+			switch (child['wm-property']) {
+				case 'in-reply-to':
+					return child.content?.text
+				case 'like-of':
+					return 'liked this'
+				case 'repost-of':
+					return 'reposted this'
+				default:
+					return 'interacted with this post in an unknown way'
+			}
+		}
+
+		async function fetchInteractions(headerTitle: string | null) {
+			const response = await fetch(
+				'https://webmention.io/api/mentions.jf2?target=' +
+					'https://jswhisperer.uk/post/revisiting-my-first-homepage/'
+			) //document.URL)
+			debugger
+			const data = await response.json()
+			if (data && data.children.length > 0) {
+				const interactions = document.createElement('div')
+				interactions.innerHTML = `<h3>${headerTitle ?? 'Interactions'}</h3>`
+
+				for (const child of data.children) {
+					const interaction = document.createElement('div')
+
+					interaction.innerHTML = `
+              <p>
+                  <strong><a href="${child.author.url}" target="_blank">${child.author.name}</a></strong>
+                  <small> - ${new Date(child['wm-received']).toLocaleString('en-US', {
+										month: 'short',
+										day: 'numeric',
+										year: 'numeric'
+									})}</small>
+              </p>
+              <blockquote>${setContent(child)}</blockquote>
+          `
+
+					interactions.appendChild(interaction)
+				}
+
+				const upvoteForm = document.getElementById('upvote-form')
+				if (upvoteForm && upvoteForm.parentNode) {
+					upvoteForm.parentNode.insertBefore(interactions, upvoteForm.nextSibling)
+				}
+			}
+		}
+
+		await fetchInteractions('bob')
+	}
+</script>
