--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -133,6 +133,12 @@ const atomFeed = '/atom.xml'
 
 {pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} />}
 
+<script
+	is:raw
+	defer
+	src='https://cloud.umami.is/script.js'
+	data-website-id='5d86b231-4cb5-49e5-8d7a-707e3f5ba0c7'></script>
+
 <style is:global>
 	@import url('/styles/global.css');
 </style>
