--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -139,6 +139,11 @@ const atomFeed = '/atom.xml'
 	src='https://cloud.umami.is/script.js'
 	data-website-id='5d86b231-4cb5-49e5-8d7a-707e3f5ba0c7'></script>
 
+<script
+	src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'
+	integrity='sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=='
+	crossorigin='anonymous'></script>
+
 <style is:global>
 	@import url('/styles/global.css');
 </style>
