--- a/src/pages/post/[...slug].astro
+++ b/src/pages/post/[...slug].astro
@@ -113,7 +113,7 @@ function getWebmentionsForUrl(webmentions: any[], url: any) {
 					<input
 						type='hidden'
 						name='redirect_uri'
-						value=`https://jswhisperer.uk/post/${post.slug}`
+						value=`https://jswhisperer.uk/post/${post.slug}/`
 					/>
 				</form>
 
