--- a/src/pages/post/[...slug].astro
+++ b/src/pages/post/[...slug].astro
@@ -144,7 +144,7 @@ function getWebmentionsForUrl(webmentions: any[], url: any) {
 			}),
 			body: new URLSearchParams({
 				code,
-				redirect_uri: document.URL,
+				redirect_uri: `${document.URL.split('/')[0]}//${document.URL.split('/')[2]}/${document.URL.split('/')[3]}/${document.URL.split('/')[4]}/`,
 				client_id: `${document.URL.split('/')[0]}//${document.URL.split('/')[2]}/`
 			}),
 			redirect: 'follow'
