--- a/src/pages/post/[...slug].astro
+++ b/src/pages/post/[...slug].astro
@@ -107,7 +107,13 @@ function getWebmentionsForUrl(webmentions: any[], url: any) {
 
 				<form action='https://indieauth.com/auth' method='get'>
 					<label for='indie_auth_url'>Web Address:</label>
-					<input id='indie_auth_url' type='text' name='me' placeholder='yourdomain.com' />
+					<input
+						id='indie_auth_url'
+						type='text'
+						name='me'
+						placeholder='yourdomain.com'
+						autocomplete='true'
+					/>
 					<p><button type='submit'>Sign In</button></p>
 					<input type='hidden' name='client_id' value='https://jswhisperer.uk/' />
 					<input
