--- a/src/pages/post/[...slug].astro
+++ b/src/pages/post/[...slug].astro
@@ -137,13 +137,14 @@ function getWebmentionsForUrl(webmentions: any[], url: any) {
 <script>
 	const urlParams = new URLSearchParams(window.location.search)
 	const code = urlParams.get('code')
+	let loggedIn
 	const checkCode = async (code: string) => {
 		console.log({
 			code,
 			redirect_uri: `${document.URL.split('/')[0]}//${document.URL.split('/')[2]}/${document.URL.split('/')[3]}/${document.URL.split('/')[4]}/`,
 			client_id: `${document.URL.split('/')[0]}//${document.URL.split('/')[2]}/`
 		})
-		const loggedIn = await fetch('https://indieauth.com/auth', {
+		loggedIn = await fetch('https://indieauth.com/auth', {
 			method: 'POST',
 			headers: new Headers({
 				'Content-Type': 'application/x-www-form-urlencoded'
@@ -158,10 +159,10 @@ function getWebmentionsForUrl(webmentions: any[], url: any) {
 			.then((response) => response.status)
 			.then((result) => console.log(result))
 			.catch((error) => console.error(error))
-		return loggedIn
 	}
 	if (code) {
-		console.log({ isloggedIn: await checkCode(code) })
+		await checkCode(code)
+		console.log({ loggedIn })
 		//console.log(loggedIn)
 	}
 </script>
