--- a/src/pages/post/[...slug].astro
+++ b/src/pages/post/[...slug].astro
@@ -157,8 +157,8 @@ function getWebmentionsForUrl(webmentions: any[], url: any) {
 			redirect: 'follow'
 		})
 			.then((response) => response.status)
-			.then((result) => console.log(result))
-			.catch((error) => console.error(error))
+			.then((result) => console.log({ result }))
+			.catch((error) => console.error({ error }))
 	}
 	if (code) {
 		await checkCode(code)
