--- a/src/pages/post/[...slug].astro
+++ b/src/pages/post/[...slug].astro
@@ -105,7 +105,7 @@ function getWebmentionsForUrl(webmentions: any[], url: any) {
 
 				<Content components={{ Code, SButton, Picture }} />
 
-				<form action='https://indieauth.com/auth' method='get'>
+				<!-- <form action='https://indieauth.com/auth' method='get'>
 					<label for='indie_auth_url'>Web Address:</label>
 					<input
 						id='indie_auth_url'
@@ -121,7 +121,7 @@ function getWebmentionsForUrl(webmentions: any[], url: any) {
 						name='redirect_uri'
 						value=`https://jswhisperer.uk/post/${post.slug}/`
 					/>
-				</form>
+				</form> -->
 
 				<!-- related posts -->
 				<footer>
