--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,8 +1,7 @@
 ---
 import BaseHead from '@/components/BaseHead'
 import Footer from '@/components/Footer'
-import Header from '@/components/Header'
-import NewHeader from '@/components/NewHeader'
+import NewHeader from '@/components/Header'
 import ProviderAnimations from '@/components/ProviderAnimations'
 import ProviderTheme from '@/components/ProviderTheme'
 import TwSizeIndicator from '@/components/TwSizeIndicator'
@@ -36,7 +35,7 @@ const structuredData = {
 	</Head>
 
 	<body id='body'>
-		<Header />
+		<!-- <Header /> -->
 		<NewHeader />
 		<main
 			class='px-5 sm:mx-auto sm:max-w-2xl sm:px-8 lg:px-0 antialiased md:max-w-6xl grid gap-12 overflow-hidden md:overflow-visible'
