--- a/src/components/LinkUnderline.astro
+++ b/src/components/LinkUnderline.astro
@@ -2,7 +2,7 @@
 const { link } = Astro.props
 ---
 
-<li class='content__item'>
+<div class='content__item'>
 	<a href={link} class='link link--iocaste'>
 		<span
 			><slot />
@@ -102,4 +102,4 @@ const { link } = Astro.props
 		}
 		/*! CSS Used fontfaces */
 	</style>
-</li>
+</div>
