--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -56,23 +56,16 @@ const atomFeed = '/atom.xml'
 <link rel='canonical' href={canonicalURL.toString()} />
 
 {pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} />}
-<script src='https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.min.js'></script>
-
-<script src='https://jswhisperer.uk/js/jquery.min.js'></script>
+<!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.min.js'></script> -->
 
 <!-- <script src='https://jswhisperer.uk/js/responsiveslides.min.js'></script> -->
 <link rel='authorization_endpoint' href='https://indieauth.com/auth' />
 <link rel='token_endpoint' href='https://tokens.indieauth.com/token' />
 
-<script>
-	//	head?.js('https://jswhisperer.uk/js/jquery.smooth-scroll.min.js')
-</script>
-
 <!-- Primary Meta Tags -->
 <title>{siteTitle}</title>
 
 <!-- ViewTransitions  -->
-<ViewTransitions />
 
 <!-- SEO -->
 <meta name='title' content={siteTitle} />
@@ -80,21 +73,6 @@ const atomFeed = '/atom.xml'
 <meta name='author' content={siteConfig.author} />
 <!-- <script type='module' src='/sw.js'></script> -->
 
-<!-- <script is:inline>
-    addEventListener("load", () => {
-      if ("serviceWorker" in navigator) {
-        navigator.serviceWorker
-          .register("/sw.js")
-          .then(() => {
-            console.log("Service Worker Registered");
-          })
-          .catch((err) => {
-            console.log("Some error occurred while registering service worker");
-            console.log(err);
-          });
-      }
-    });
-  </script> -->
 <script>
 	if ('serviceWorker' in navigator) {
 		navigator.serviceWorker.register(
@@ -137,10 +115,10 @@ const atomFeed = '/atom.xml'
 	src='https://cloud.umami.is/script.js'
 	data-website-id='5d86b231-4cb5-49e5-8d7a-707e3f5ba0c7'></script>
 
-<script
+<!-- <script
 	src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'
 	integrity='sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=='
-	crossorigin='anonymous'></script>
+	crossorigin='anonymous'></script> -->
 
 <style is:global>
 	@import url('/styles/global.css');
