--- a/src/components/icons/TwitterIcon.astro
+++ b/src/components/icons/TwitterIcon.astro
@@ -1,15 +1,11 @@
 <svg
+	viewBox='0 32 447.99999999999994 448'
 	xmlns='http://www.w3.org/2000/svg'
 	class='w-8 md:w-6'
 	viewBox='0 0 24 24'
-	stroke-width='1.3'
-	stroke='currentColor'
-	fill='none'
-	stroke-linecap='round'
-	stroke-linejoin='round'
+	><path d='M0 0h512v512H0z' fill='#000'></path><path
+		clip-rule='evenodd'
+		d='M192.034 98H83l129.275 170.757L91.27 412h55.908l91.521-108.34 81.267 107.343H429L295.968 235.284l.236.303L410.746 99.994h-55.908l-85.062 100.694zm-48.849 29.905h33.944l191.686 253.193h-33.944z'
+		fill='#fff'
+		fill-rule='evenodd'></path></svg
 >
-	<path stroke='none' d='M0 0h24v24H0z' fill='none'></path>
-	<path
-		d='M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c0 -.249 1.51 -2.772 1.818 -4.013z'
-	></path>
-</svg>
