--- a/src/components/Search.astro
+++ b/src/components/Search.astro
@@ -111,6 +111,7 @@ import SearchIcon from '@/components/icons/SearchIcon'
 					const { PagefindUI } = await import('@pagefind/default-ui')
 					new PagefindUI({
 						element: '#pagefind__search',
+						id: 'search',
 						baseUrl: import.meta.env.BASE_URL,
 						bundlePath: import.meta.env.BASE_URL.replace(/\/$/, '') + '/pagefind/',
 						showImages: false
