--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -16,7 +16,7 @@ const {
 
 <article
 	transition:animate={slide({ duration: '0.5s' })}
-	class='grid grid-rows-[300px_auto] md:grid-rows-[300px_220px] min-h-full group my-10'
+	class='h-entry grid grid-rows-[300px_auto] md:grid-rows-[300px_220px] min-h-full group my-10'
 >
 	<a href={`/post/${slug}/`}>
 		{
@@ -48,8 +48,8 @@ const {
 
 	<div class='flex justify-between flex-col gap-4 md:gap-0 py-6 pl-1'>
 		<div class='flex flex-col gap-3'>
-			<div class='flex flex-col gap-2'>
-				<a class='text-2xl font-semibold -tracking-wider' href={`/post/${slug}/`}>
+			<div class='e-content p-name flex flex-col gap-2'>
+				<a class='u-url text-2xl font-semibold -tracking-wider' href={`/post/${slug}/`}>
 					{title}
 				</a>
 			</div>
