--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,8 @@ import { Picture } from 'astro:assets'
 import { getCollection } from 'astro:content'
 
 const MAX_POSTS = 1005 // max number of posts to show on the home page
-const posts = await getCollection('blog', { limit: MAX_POSTS })
+const allPosts = await getCollection('blog')
+const posts = allPosts.slice(0, MAX_POSTS)
 ---
 
 <BaseLayout title='Home'>
