--- a/src/components/WebMentions.astro
+++ b/src/components/WebMentions.astro
@@ -127,7 +127,9 @@ const showDate = (webmention: string) =>
 					interaction.innerHTML = `
               <p>
                   <strong>
-                    <a href="${child.author.url || 'https://jswhisperer.uk/author/greg'}" target="_blank">${child.author.name}</a></strong>
+                    <a href="${child.author.url}" target="_blank">
+                      <img src="${child.author.photo}" title="${child.author.name}" />
+                      </a></strong>
                   <small> - ${new Date(child['wm-received']).toLocaleString('en-US', {
 										month: 'short',
 										day: 'numeric',
