--- a/src/components/WebMentions.astro
+++ b/src/components/WebMentions.astro
@@ -1,5 +1,6 @@
 ---
 import { Image } from 'astro:assets'
+import { Picture, BackgroundPicture } from 'astro-imagetools/components'
 
 import sanitizeHTML from 'sanitize-html'
 const sanitize = (entry: { content: any }) => {
@@ -48,24 +49,37 @@ const showDate = (webmention: string) =>
 						<div class='avatar-and-author '>
 							<a href={webmention.author.url} rel='author' aria-label='author url'>
 								{webmention.author.photo ? (
-									<Image
+									<Picture
 										alt={webmention.author.name}
 										title={webmention.author.name}
-										class='avatar'
 										height='50'
-										src={webmention.author.photo}
 										width='50'
+										src={webmention.author.photo}
+										fit='cover'
+										attributes={{
+											img: { style: 'width:50px; border-radius:50%; overflow:hidden;' }
+										}}
 									/>
-								) : null}
+								) : // <Image
+								// 	alt={webmention.author.name}
+								// 	title={webmention.author.name}
+								// 	class='avatar'
+								// 	height='50'
+								// 	src={webmention.author.photo}
+								// 	width='50'
+								// />
+								null}
 							</a>
 						</div>
 						<div class='information'>
 							{webmention['wm-property'] === 'like-of' && (
 								<p class='flex'>
 									Liked on:
-									<time aria-hidden='true' datetime={webmention['wm-received']}>
-										{showDate(webmention['wm-received'])}
-									</time>
+									<small>
+										<time datetime={webmention['wm-received']}>
+											{showDate(webmention['wm-received'])}
+										</time>
+									</small>
 								</p>
 							)}
 
@@ -93,6 +107,9 @@ const showDate = (webmention: string) =>
 }
 <style>
 	.avatar {
+		width: 50px;
+
+		height: 50px;
 		border-radius: 50%;
 		overflow: hidden;
 	}
