--- a/src/components/WebMentions.astro
+++ b/src/components/WebMentions.astro
@@ -180,6 +180,6 @@ const showDate = (webmention: string) =>
 			}
 		}
 
-		await fetchInteractions('Webmentions')
+		//	await fetchInteractions('Webmentions')
 	}
 </script>
